# linuxbin

./: CMakeLists.txt  README.md  README.txt  cleanLocalHdd.py  comp.py  externalProgramPath.py  externalProgramPathGui.pyw  launch.py  launchGui.pyw  parametricJob.py  postProLoop.py  postProLoop.pyw  postProLoopGui.pyw  prmClasses.py  prmClassesGui.py  updatebin.sh
cfg/: loop.sh
cfg/CentOs6/: compilers.bashrc  compilers.profile  mklTbb.profile  mumps.profile  parasolid.profile  python.profile  qt.profile  subversion.profile  vtk.profile
cfg/blueberry/: compilers.bashrc  compilers.profile  intelCommunity.bashrc  intelCommunity.profile  matlab.profile  mumps.profile  samcef.profile
cfg/clifton/: intelCommunity.bashrc  intelCommunity2017.bashrc  mumps.profile  samcef.profile
cfg/default/: aliases.bashrc  cvs.bashrc  editor.bashrc  functions.bashrc  omp.profile  svn_git.bashrc  zlocal.profile
cfg/fabulous/: ls_colors.bashrc  modules.profile
cfg/garfield/: DynELA.profile  bin_rb.profile  compilers.bashrc  compilers.profile  coverity.profile  eclipse.bashrc  eclipse.profile  encfs.bashrc  lam3.bashrc  matlab.profile  metafor.bashrc  metafor.profile  misc.bashrc  mumps.profile  parasolid.profile  paraview.bashrc  paraview.profile  progs_bin.profile  samcef.profile  shareddisk.bashrc  siemens.bashrc  trilinos.bashrc  vtk.profile
cfg/gaston/: compilers.profile  vtk.profile  (+5 more)
mtfLicense/: centosVBox.lic  clifton.lic  fabulous.lic  garfield.lic  gaston.lic  hmem.lic  nic4.lic  stations.lic
rb/: bck_github.sh  bck_rep_svn.sh  mkhandout.py  rsync_repos.sh
svn/: config
(+43 files in other folders)
